--- a/css/home.css
+++ b/css/home.css
@@ -1,21 +1,27 @@
 body {
     font-family: sans-serif;
+    background-color: #F5F5F5;
+}
+
+a {
+    text-decoration: none;
+    color: #4186C9;
 }
 
 #title {
     text-align: center;
     font-family: 'Avenir';
     font-weight: 500;
-    font-size: 40px;
+    font-size: 60px;
     padding: 0;
-    margin: 25px 0 5px 0;
+    margin: 25px 0 2px 0;
 }
 
 #tagline {
     text-align: center;
     font-family: 'Avenir';
     font-weight: 400;
-    font-size: 20px;
+    font-size: 30px;
     padding: 0;
     margin: 0;
 }
