--- a/css/home.css
+++ b/css/home.css
@@ -26,7 +26,6 @@ a {
 
 .multiview {
     padding: 0 20px 0 20px;
-    min-width: 565px;
     width: 65%;
     z-index: 5;
 }
@@ -37,7 +36,7 @@ a {
 
 .multiview_menu li {
     display: inline-block;
-    padding: 0 35px 5px 35px;
+    padding: 5px 35px 5px 35px;
     cursor: pointer;
     font-family: 'Avenir';
 }
