--- a/css/home.css
+++ b/css/home.css
@@ -24,6 +24,27 @@ a {
     margin: 0;
 }
 
+#enter {
+    font-family: 'Avenir';
+    color: black;
+    font-weight: 400;
+    background-color: rgba(255,255,255,0.65);
+    border-radius: 20px;
+    border: 1px solid #4186C9;
+    font-size: 25px;
+    padding: 10px;
+    margin: 0;
+    width: 200px;
+    text-align: center;
+    position: absolute;
+    top: 43vh;
+    right: 30px;
+}
+
+#enter a {
+    color: inherit;
+}
+
 .multiview {
     padding: 0 20px 0 20px;
     width: 65%;
