--- a/css/style.css
+++ b/css/style.css
@@ -93,9 +93,13 @@ li.ui-menu-item:hover {
     margin: 2px 0 0 0;
 }
 
+#word-vid {
+    margin-bottom: 30px;
+}
+
 #about-data {
-    padding-top: 8px;
-    padding-bottom: 3px;
+    padding-top: 5px;
+    padding-bottom: 10px;
     text-align: center;
 }
 
