--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 }
 
 div.tabcontents {
-    width: 280px;
+    width: 285px;
     height: 400px;
     padding: 0;
 }
@@ -75,7 +75,7 @@ li.ui-menu-item:hover {
 }
 
 #filter-container {
-    width: 270px;
+    width: 100%;
     height: 400px;
     margin-left: 10px;
     font-size: 12px;
@@ -104,7 +104,11 @@ li.ui-menu-item:hover {
 }
 
 .filter-box {
-    width: 250px;
+    width: 93%;
+}
+
+.jBox-content {
+    padding: 0;
 }
 
 #jBox-slider-grab {
@@ -129,7 +133,12 @@ li.ui-menu-item:hover {
     overflow: hidden;
 }
 
-.ui-checkbox .btn, .ui-radio .ui-btn {
+#download_link {
+    background-color: #48b8dc;
+    color: white;
+}
+
+.ui-checkbox .btn, .ui-btn {
     background-color: white;
 }
 
