--- a/css/home.css
+++ b/css/home.css
@@ -64,11 +64,12 @@ a {
 
 h4 {
     margin: 0;
+    margin-top: 35px;
     padding: 0;
 }
 
-h4:nth-of-type(2) {
-    margin-top: 35px;
+h4:nth-of-type(1) {
+    margin-top: 0;
 }
 
 
