--- a/css/home.css
+++ b/css/home.css
@@ -9,7 +9,7 @@ a {
 }
 
 #title {
-    font-family: 'Avenir';
+    font-family: 'Avenir', sans-serif;
     font-weight: 500;
     font-size: 60px;
     padding: 0;
@@ -17,7 +17,7 @@ a {
 }
 
 #tagline {
-    font-family: 'Avenir';
+    font-family: 'Avenir', sans-serif;
     font-weight: 400;
     font-size: 30px;
     padding: 0;
@@ -25,15 +25,26 @@ a {
 }
 
 #enter {
-    font-family: 'Avenir';
-    color: black;
+    font-family: 'Avenir', sans-serif;
     font-weight: 400;
     font-size: 25px;
-    margin: 0;
+    margin: auto;
+    margin-top: 25px;
+
+    padding: 20px;
+    background-color: #4186C9;
+    border-radius: 10px;
+    width: 300px;
+    text-align: center;
+    color: white;
+}
+
+#enter_link {
+  text-align: center;
 }
 
 .multiview {
-    padding: 0 20px 0 20px;
+    padding: 0 20px 30px 20px;
     width: 65%;
     z-index: 5;
 }
@@ -46,7 +57,7 @@ a {
     display: inline-block;
     padding: 5px 35px 5px 35px;
     cursor: pointer;
-    font-family: 'Avenir';
+    font-family: 'Avenir', sans-serif;
 }
 
 .multiview_menu li:nth-of-type(1) {
