--- a/css/home.css
+++ b/css/home.css
@@ -30,6 +30,7 @@ a {
     font-size: 25px;
     margin: auto;
     margin-top: 25px;
+    margin-bottom: 25px;
 
     padding: 20px;
     background-color: #4186C9;
@@ -83,6 +84,9 @@ h4:nth-of-type(1) {
     margin-top: 0;
 }
 
+.license {
+    font-size: 11px;
+}
 
 #visualization_pic {
     position: absolute;
