--- a/visualization/css/viz-style.css
+++ b/visualization/css/viz-style.css
@@ -64,62 +64,48 @@ svg {
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
-    .left-sidebar {padding-top: 15px;}
-    .left-sidebar a {font-size: 18px;}
+    .left-sidebar {
+        padding-top: 15px;
+    }
+
+    .left-sidebar a {
+        font-size: 18px;
+    }
 }
 
-/* Right sidebar */
-.right-sidebar {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    right: 0;
-    background-color: white;
-    opacity: 0.7;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
+/* styling for tabs */
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: "f1f1f1";
 }
 
-.right-sidebar a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: black;
-    display: block;
-    transition: 0.3s;
-}
-
-.right-sidebar .close-right-sidebar {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-}
-
-.right-open-button {
-    font-size: 20px;
-    cursor: pointer;
-    background-color: #111;
-    color: white;
-    padding: 10px 15px;
+/* Style the buttons inside the tab */
+.tab button {
+    background-color: inherit;
+    float: left;
     border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
 }
 
-.right-open-button:hover {
-    background-color: #444;
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
 }
 
-#main-right {
-    transition: margin-right .5s;
-    padding: 16px;
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #ccc;
 }
 
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-    .left-sidebar {padding-top: 15px;}
-    .left-sidebar a {font-size: 18px;}
+/* Style the tab content */
+.tab-content {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
 }
