--- a/visualization/css/viz-style.css
+++ b/visualization/css/viz-style.css
@@ -20,13 +20,12 @@ svg {
     border-radius: 5px;
     background-color: white;
     padding: 2% 2%;
-    overflow: scroll;
+    overflow: auto;
 }
 
 
 .inside-tab-content {
     min-height: 470px;
-    overflow: scroll;
 }
 
 .inside-tab-content h4,h6 {
