--- a/visualization/css/viz-style.css
+++ b/visualization/css/viz-style.css
@@ -1,6 +1,5 @@
 html,
 body,
-/*body { margin:0;position:fixed;top:0;right:0;bottom:0;left:0; }*/
 svg {
     margin: 0;
     padding: 0;
@@ -93,4 +92,11 @@ svg {
     height:700px;
     overflow: hidden;
     overflow-y: scroll;
+}
+
+#goto {
+    width:100px;
+    display: none;
+    fill-opacity: 0;
+    font-size: small;
 }
