--- a/visualization/css/viz-style.css
+++ b/visualization/css/viz-style.css
@@ -17,8 +17,8 @@ svg {
 
 /* for the side panel */
 .side-container {
-    height: 700px;
-    width: 390px;
+    height: 70% !important;
+    width: 27% !important;
     min-width: 320px;
     margin: 2% 2%;
     border: 1px solid;
