--- a/visualization/css/style_bootstrap.css
+++ b/visualization/css/style_bootstrap.css
@@ -9,11 +9,11 @@ body {
 }
 
 p {
-    font-family: 'Poppins', sans-serif;
+    /*font-family: 'Poppins', sans-serif;*/
     font-size: 1.1em;
     font-weight: 300;
     line-height: 1.7em;
-    color: #999;
+    color: #fafafa;
 }
 
 a,
