--- a/visualization/css/viz-style-sidebar.css
+++ b/visualization/css/viz-style-sidebar.css
@@ -1,6 +1,5 @@
 html,
-body,
-svg{
+body{
     margin: 0;
     padding: 0;
     border: 0;
@@ -12,6 +11,8 @@ svg{
 }
 
 svg {
+    width: 100%;
+    height: 100%;
     top: 2%;
 }
 
