Fixed text color on node search dropdown and scatter plot to pick files from data folder.

--- a/visualization/css/awesomplete.css
+++ b/visualization/css/awesomplete.css
@@ -78,6 +78,9 @@
 		position: relative;
 		padding: .2em .5em;
 		cursor: pointer;
+		color: darkslategrey !important;
+
+
 	}
 	
 	.awesomplete > ul > li:hover {
