--- a/visualization/css/viz-style-sidebar.css
+++ b/visualization/css/viz-style-sidebar.css
@@ -26,7 +26,7 @@ svg {
 /* for the side panel */
 .side-container {
     height: 70% !important;
-    width: 27% !important;
+    width: 40% !important;
     min-width: 320px;
     margin: 2% 2%;
     border: 1px solid;
@@ -113,3 +113,10 @@ svg {
     font-size: small;
     font-weight: bold;
 }
+
+label {
+    color: black;
+}
+
+
+
