--- a/visualization/css/style_bootstrap.css
+++ b/visualization/css/style_bootstrap.css
@@ -7,7 +7,9 @@ body {
     font-family: sans-serif;
     background: #fafafa;
 }
-
+#graph-box{
+    padding-left: 20%;
+}
 li {
     font-size: 1.1em;
     font-weight: 300;
