--- a/visualization/css/viz-style-sidebar.css
+++ b/visualization/css/viz-style-sidebar.css
@@ -26,7 +26,7 @@ svg {
 /* for the side panel */
 .side-container {
     height: 70% !important;
-    width: 27% !important;
+    width: 25% !important;
     min-width: 320px;
     margin: 2% 2%;
     border: 1px solid;
@@ -34,6 +34,8 @@ svg {
     background-color: white;
     padding: 2% 2%;
     overflow: auto;
+    display: inline-block;
+    vertical-align: top;
 }
 
 .inside-tab-content {
@@ -61,7 +63,8 @@ svg {
 
 /* for scatter plot matrix */
 #plt {
-    margin-left: 30%;
+    /*margin-left: 30%;*/
+    width: 900px;
 }
 
 .dot {
@@ -152,4 +155,10 @@ label {
 
 .dropdown-toggle {
     background-color: #433089;   
+}
+
+#svgDiv {
+    overflow: auto;
+    display: inline-block;
+    padding: 0% 5% 0% 5%;
 }
