Replace Neighborhood density on pair plots page. Add ability to see which signs are being hovered on

--- a/visualization/css/viz-style.css
+++ b/visualization/css/viz-style.css
@@ -139,3 +139,12 @@ svg {
 #description{
     font-size: medium;
 }
+
+ul {
+    list-style-type: none;
+    padding: 5px;
+}
+
+#signDataHoverList span{
+    font-weight: bold;
+}
