--- a/visualization/css/viz-style.css
+++ b/visualization/css/viz-style.css
@@ -110,6 +110,14 @@ svg {
     font-weight: bold;
 }
 
+#goto-viewData {
+    width:100px;
+    display: none;
+    fill-opacity: 0;
+    font-size: small;
+    font-weight: bold;
+}
+
 .reset{
     background-color:#433089 !important;
     color:#fff !important;
