Update tutorial: remove general description from sidebar and make it fourth hint button, make coloring on sidebar consistent, move hint buttons slightly to the right. Clean up commented out code.

--- a/visualization/css/viz-style-sidebar.css
+++ b/visualization/css/viz-style-sidebar.css
@@ -246,13 +246,20 @@ label {
 }
 
 .fa-info-circle {
-    color: gray;
+    color: #fff;
     float: left;
-    padding-top: 7px
+    padding-top: 7px;
 }
 
-.fa-info-circle-right {
-    float: none;
-    color: #fff;
-    padding-left: 10px;
+.fa-info-circle-padding-right {
+    padding-right: 10px;
+}
+
+.fa-info-circle-gray {
+    color: gray;
+}
+
+.active-filter-label {
+    margin-left: 5px;
+    background-color: #433089;
 }
