Add data summary and data table links to brushed area

--- a/visualization/css/viz-style-sidebar.css
+++ b/visualization/css/viz-style-sidebar.css
@@ -127,6 +127,14 @@ svg {
     font-weight: bold;
 }
 
+.brushed-graph-link {
+    width:100px;
+    display: none;
+    fill-opacity: 0;
+    font-size: small;
+    font-weight: bold;
+}
+
 .signData-header {
     font-weight: bold !important;
     font-size: large !important;
