--- a/visualization/css/viz-style-sidebar.css
+++ b/visualization/css/viz-style-sidebar.css
@@ -127,6 +127,14 @@ svg {
     font-weight: bold;
 }
 
+.brushed-graph-link {
+    width:100px;
+    display: none;
+    fill-opacity: 0;
+    font-size: small;
+    font-weight: bold;
+}
+
 .signData-header {
     font-weight: bold !important;
     font-size: large !important;
@@ -239,47 +247,4 @@ label {
     background-color: rgba(0,0,0,0);
     color: white;
     border: none;
-}
-
-.fa-info-circle:hover {
-    color: cyan !important;
-}
-
-.fa-info-circle {
-    color: #fff;
-    float: left;
-    padding-top: 7px;
-}
-
-.fa-info-circle-padding-right {
-    padding-right: 10px;
-}
-
-.fa-info-circle-gray {
-    color: gray;
-}
-
-.active-filter-label {
-    margin-left: 5px;
-    background-color: #433089;
-}
-
-.standardized-button {
-    background-color: #433089;
-}
-
-.search-word {
-    padding-top: 20px;
-}
-
-.tutorial-button {
-    margin-left: 20px
-}
-
-.download-data {
-    margin-top: 40px;
-}
-
-.dropdown-menu-wide {
-    width: 90%;
 }
