--- a/visualization/css/viz-style-sidebar.css
+++ b/visualization/css/viz-style-sidebar.css
@@ -156,7 +156,7 @@ label {
     color: #fff;
     border-radius: 4px;
     font-size: 12px;
-    max-height: 230px;
+    /*max-height: 230px;*/
     overflow-y: auto;
 }
 
