Update tutorial popup spacing

--- a/visualization/css/viz-style-sidebar.css
+++ b/visualization/css/viz-style-sidebar.css
@@ -358,3 +358,8 @@ label {
 .modal-footer-custom {
     border-top: none;
 }
+
+.centered-text {
+    text-align: center;
+    margin: 0 !important;
+}
