--- a/visualization/css/viz-style-sidebar.css
+++ b/visualization/css/viz-style-sidebar.css
@@ -129,7 +129,7 @@ svg {
 
 .signData-header {
     font-weight: bold !important;
-    font-size: large !important;
+    /*font-size: large !important;*/
 }
 
 label {
@@ -163,6 +163,8 @@ label {
 .dropdown-toggle {
     background-color: #fafafa;
     color: black;
+    margin-bottom: 0 !important;
+    padding: 5px 25px !important;
 }
 
 .asl-list{
@@ -290,10 +292,10 @@ label {
     display: block;
     border-radius: 5px;
     margin-bottom: 5px;
-    padding: 10px;
+    padding: 5px 10px;
     border: none;
     width: 47%;
-    height: 50px;
+    /*height: 50px;*/
     line-height: 1.7em;
     margin-top: 10px;
 }
@@ -312,7 +314,9 @@ label {
 
 .filters {
     background-color: #433089 !important;
-    margin-top: 50px;
+    margin-top: 40px;
+    margin-bottom: 0 !important;
+    padding: 5px 10px !important;;
 }
 
 .outer-button {
@@ -362,4 +366,34 @@ label {
 .centered-text {
     text-align: center;
     margin: 0 !important;
+}
+
+table {
+    border-collapse: collapse;
+    table-layout: fixed;
+}
+
+th, td {
+    /*padding: 5px 0px;*/
+    width: 50%;
+    font-size: 16px;
+}
+
+table td, table th {
+    border: 1px solid #fff;
+}
+table tr:first-child td {
+    border-top: 0;
+}
+table tr:last-child td {
+    border-bottom: 0;
+}
+table tr td:first-child,
+table tr th:first-child {
+    border-left: 0;
+}
+table tr td:last-child,
+table tr th:last-child {
+    border-right: 0;
+    padding-left: 15px;
 }
