--- a/visualization/css/viz-style-sidebar.css
+++ b/visualization/css/viz-style-sidebar.css
@@ -283,8 +283,18 @@ label {
 /*    margin-top: 40px;*/
 /*}*/
 
+.dropdown-item {
+    padding: 0;
+    margin-bottom: 0 !important;
+}
+
 .dropdown-menu-wide {
     width: 42%;
+    padding: 5px 0;
+}
+
+.dropdown-divider {
+    margin: 5px 0;
 }
 
 .small-sidebar-button {
