--- a/visualization/css/viz-style-sidebar.css
+++ b/visualization/css/viz-style-sidebar.css
@@ -174,10 +174,10 @@ ul.CTAs a {
     font-size: 10px;
     position: relative;
     text-indent: -9999em;
-    border-top: 1.1em solid rgba(0, 191, 255, 0.2);
-    border-right: 1.1em solid rgba(0, 191, 255, 0.2);
-    border-bottom: 1.1em solid rgba(0, 191, 255, 0.2);
-    border-left: 1.1em solid blue;
+    border-top: 1.1em solid rgba(115, 134, 213, 0.5);
+    border-right: 1.1em solid rgba(115, 134, 213, 0.5);
+    border-bottom: 1.1em solid rgba(115, 134, 213, 0.5);
+    border-left: 1.1em solid #433089;
     -webkit-transform: translateZ(0);
     -ms-transform: translateZ(0);
     transform: translateZ(0);
