--- a/visualization/css/viz-style-sidebar.css
+++ b/visualization/css/viz-style-sidebar.css
@@ -84,13 +84,11 @@ ul.CTAs a {
     /*fill: rgba(70, 131, 180, 0.3);*/
     /*fill-opacity: 0.25;*/
 }
-.selected {
-    fill: rgb(255,125,80);
-    fill-opacity: .25;
-}
+
 .hidden {
     opacity: 0.3;
 }
+
 .extent {
     fill: #000;
     fill-opacity: .125;
@@ -122,18 +120,6 @@ ul.CTAs a {
     fill-opacity: 0;
     font-size: small;
     font-weight: bold;
-}
-
-.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active {
-    background: #f55d6c;
-}
-
-.ui-widget-header {
-    background: #46468c;
-}
-
-.ui-widget-content {
-    background: #c5c5f1;
 }
 
 .d3-tip {
@@ -184,6 +170,7 @@ ul.CTAs a {
     -webkit-animation: load8 1.1s infinite linear;
     animation: load8 1.1s infinite linear;
 }
+
 @-webkit-keyframes load8 {
     0% {
         -webkit-transform: rotate(0deg);
@@ -194,6 +181,7 @@ ul.CTAs a {
         transform: rotate(360deg);
     }
 }
+
 @keyframes load8 {
     0% {
         -webkit-transform: rotate(0deg);
@@ -204,6 +192,7 @@ ul.CTAs a {
         transform: rotate(360deg);
     }
 }
+
 #loadingDiv {
     position:absolute;
     top:25%;
@@ -215,6 +204,7 @@ ul.CTAs a {
     justify-content: center;
     align-items: center;
 }
+/* END LOADER CSS */
 
 #tooltip-closeButton {
     width: 10%;
