--- a/visualization/css/viz-style-sidebar.css
+++ b/visualization/css/viz-style-sidebar.css
@@ -192,6 +192,17 @@ ul.CTAs a {
     }
 }
 
+@-moz-keyframes load8 {
+    0% {
+        -moz-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -moz-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
 @keyframes load8 {
     0% {
         -webkit-transform: rotate(0deg);
