--- a/visualization/css/viz-style-sidebar.css
+++ b/visualization/css/viz-style-sidebar.css
@@ -175,9 +175,11 @@ ul.CTAs a {
     border-bottom: 1.1em solid rgba(115, 134, 213, 0.5);
     border-left: 1.1em solid #433089;
     -webkit-transform: translateZ(0);
+    -moz-transform: translateZ(0);
     -ms-transform: translateZ(0);
     transform: translateZ(0);
     -webkit-animation: load8 1.1s infinite linear;
+    -moz-animation: load8 1.1s infinite linear;
     animation: load8 1.1s infinite linear;
 }
 
