--- a/visualization/css/bootstrap_sidebar_network.css
+++ b/visualization/css/bootstrap_sidebar_network.css
@@ -188,7 +188,7 @@ a.article:hover {
 
 #content {
     width: 100%;
-    padding: 20px;
+    padding: 20px 20px 0px 20px;
     min-height: 100vh;
     transition: all 0.3s;
     position: absolute;
