--- a/visualization/css/bootstrap_sidebar_pairplots.css
+++ b/visualization/css/bootstrap_sidebar_pairplots.css
@@ -11,7 +11,9 @@ body {
     /*padding-left: 26%;*/
     width: fit-content;
     width: -moz-fit-content;
-    margin: auto;
+    margin-left: 440px; /* sidebar is 440px wide */
+    padding-left: 40px;
+    padding-right: 40px;
 }
 li {
     font-size: 1.1em;
@@ -186,7 +188,7 @@ a.article:hover {
 
 #content {
     width: 100%;
-    padding: 20px;
+    padding: 20px 20px 10px 20px;
     min-height: 100vh;
     transition: all 0.3s;
     position: absolute;
