Fix svg padding issue on scatterplots page

--- a/visualization/css/viz-style-sidebar.css
+++ b/visualization/css/viz-style-sidebar.css
@@ -71,7 +71,8 @@ ul.CTAs a {
 
 /* for scatter plot matrix */
 #plt {
-    /*width: 900px;*/
+    margin-top: 5%; !important;
+    width: 940px; !important;
 }
 
 .selected {
