Make sure button styling is always consistent on loading across browsers

--- a/visualization/css/viz-style-sidebar.css
+++ b/visualization/css/viz-style-sidebar.css
@@ -337,13 +337,15 @@ ul.CTAs a {
 }
 
 .outer-button {
-    background-color: #433089;
-    border-color: #433089;
+    background-color: #433089 !important;
+    border-color: #433089 !important;
+    color: white !important;
 }
 
 .outer-button:hover{
     background-color: #433089;
     border-color: #433089;
+    color: white;
 }
 
 .search-box {
