Added color to link

--- a/visualization/css/bootstrap_sidebar_network.css
+++ b/visualization/css/bootstrap_sidebar_network.css
@@ -182,6 +182,13 @@ a.article:hover {
     color: #fff !important;
 }
 
+a.link {
+    color: #007bff;
+}
+a.link:hover {
+    color: #6ab3ff;
+}
+
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
